# iREL_task

./: .gitignore  README.md  gitignore  pyproject.toml  requirements.txt
config/: videos.yaml
docs/: transcript_format.md
scripts/: run_pipeline.sh
src/cmpfe/: __init__.py  asr.py  cli.py  concept_extractor.py  graph_builder.py  io_utils.py  models.py  pipeline.py  preprocess.py  prereq_mapper.py  standardizer.py  video_ingest.py
src/code_mixed_pedagogical_flow_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
