[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-mixed-pedagogical-flow-extractor"
version = "0.1.0"
description = "Pipeline for extracting concept prerequisite flow from code-mixed educational videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cmpfe = "cmpfe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
